--- a/index.html
+++ b/index.html
@@ -4,15 +4,60 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Upload</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f4f4f4;
+      margin: 20px;
+      text-align: center;
+    }
+
+    form {
+      max-width: 400px;
+      margin: 0 auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      font-weight: bold;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4caf50;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
   <form id="uploadForm">
     <label for="excelFile">Upload Excel file:</label>
     <input type="file" id="excelFile" name="excelFile" accept=".xlsx, .xls">
-    <br>
+
     <label for="selectedDate">Select Date:</label>
     <input type="date" id="selectedDate" name="selectedDate">
-    <br>
+
     <button type="button" onclick="uploadData()">Upload</button>
   </form>
 
@@ -20,6 +65,11 @@
     function uploadData() {
       const excelFile = document.getElementById('excelFile').files[0];
       const selectedDate = document.getElementById('selectedDate').value;
+
+      if (!excelFile) {
+        alert('Please select an Excel file.');
+        return;
+      }
 
       const formData = new FormData();
       formData.append('excelFile', excelFile);
@@ -34,8 +84,12 @@
         console.log(data);
         alert('Upload successful!');
       })
-      .catch(error => console.error('Error:', error));
+      .catch(error => {
+        console.error('Error:', error);
+        alert('Error uploading file. Please try again.');
+      });
     }
   </script>
 </body>
 </html>
+
