--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     body {
       font-family: 'Arial', sans-serif;
       background-color: #f4f4f4;
-      margin: 20px;
-      text-align: center;
+      margin: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
     form {
       max-width: 400px;
-      margin: 0 auto;
+      width: 100%;
       background-color: #fff;
       padding: 20px;
       border-radius: 8px;
@@ -43,6 +46,7 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      width: 100%;
     }
 
     button:hover {
@@ -92,4 +96,3 @@
   </script>
 </body>
 </html>
-
