--- a/index.html
+++ b/index.html
@@ -4,55 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Upload</title>
-  <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    form {
-      max-width: 400px;
-      width: 100%;
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-weight: bold;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-    }
-
-    button {
-      background-color: #4caf50;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    button:hover {
-      background-color: #45a049;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <form id="uploadForm">
@@ -65,34 +17,6 @@
     <button type="button" onclick="uploadData()">Upload</button>
   </form>
 
-  <script>
-    function uploadData() {
-      const excelFile = document.getElementById('excelFile').files[0];
-      const selectedDate = document.getElementById('selectedDate').value;
-
-      if (!excelFile) {
-        alert('Please select an Excel file.');
-        return;
-      }
-
-      const formData = new FormData();
-      formData.append('excelFile', excelFile);
-      formData.append('selectedDate', selectedDate);
-
-      fetch('YOUR_API_GATEWAY_ENDPOINT', {
-        method: 'POST',
-        body: formData,
-      })
-      .then(response => response.json())
-      .then(data => {
-        console.log(data);
-        alert('Upload successful!');
-      })
-      .catch(error => {
-        console.error('Error:', error);
-        alert('Error uploading file. Please try again.');
-      });
-    }
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
