--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>P&L Revision</title>
+  <title>Data Upload</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     <button type="button" onclick="showPopup()">Upload</button>
   </form>
 
-  <div id="popup" class="popup">
+  <div id="popup" class="popup" style="display: none;">
     <form id="loginForm">
       <label for="userId">User ID:</label>
       <input type="text" id="userId" name="userId">
