--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   </form>
 
   <!-- Popup container -->
-  <div id="popup" class="popup" style="display: none;">
-    <form id="loginForm">
+    <form id="popup" class="popup" style="display: none;">
       <label for="userId">User ID:</label>
       <input type="text" id="userId" name="userId">
 
@@ -29,7 +28,6 @@
 
       <button type="button" onclick="uploadData()">Submit</button>
     </form>
-  </div>
 
   <script src="main.js"></script>
 </body>
